Ajout de la page a print.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
                 <code style="margin-left: 5px" class="is-center">Maxime BILLY</code>
                 <hr>
                 <samp style="margin-left: 5px">Born XX/03/2000 (21 yo)</samp><br>
-                <samp style="margin-left: 5px">Living in Saint Cézaire 06530</samp></br>
+                <samp style="margin-left: 5px">Living in Saint Cézaire 06530</samp>
+                <hr>
+                <div class="card" style="margin: 10px auto">
+                    <p style="margin-bottom: 0px">Driver's license (B)</p>
+                    <small>Obtained in 2020.</small>
+                    <br><br>
+                    <p> Proud owner of a <i>Renault Twingo I</i> (1992).</p>
+                </div>
+                <div class="card" style="margin: 10px auto">
+                    <p style="margin-left: 5px; margin-bottom: 0px">Introduction to aeronautics certificate</p>
+                    <small style="margin-left: 5px">Obtained in 2016.</small>
+                </div>
             </div>
             <div class="col-9"> <!-- Colonne de Droite -->
                 <h1>My background</h1>
@@ -78,8 +89,6 @@
                         <li>Biking and Running</li>
                     </ul>
                 </div>
-                Introduction to aeronautics certificate
-                Obtained in 2016.
             </div>
         </div>
     </div>
