Fix some warnings

--- a/index.html
+++ b/index.html
@@ -20,37 +20,37 @@
     <div class="card" style="margin: 10px auto">
         <div class="row">
             <div class="col"> <!-- Colonne de Gauche -->
-                <img src="content/pp.jpg" class="is-rounded" style="padding: 10px">
+                <img src="content/pp.jpg" alt="Profile-Picture" class="is-rounded" style="padding: 10px">
                 <code style="margin-left: 5px" class="is-center">Maxime BILLY</code>
                 <hr>
                 <samp style="margin-left: 5px">Born XX/03/2000 (21 yo)</samp><br>
                 <samp style="margin-left: 5px">Living in Saint Cézaire 06530</samp>
                 <hr>
                 <div class="card" style="margin: 10px auto">
-                    <p style="margin-bottom: 0px">Driver's license (B)</p>
+                    <p style="margin-bottom: 0">Driver's license (B)</p>
                     <small>Obtained in 2020.</small>
                     <br><br>
                     <p> Proud owner of a <i>Renault Twingo I</i> (1992).</p>
                 </div>
                 <div class="card" style="margin: 10px auto">
-                    <p style="margin-left: 5px; margin-bottom: 0px">Introduction to aeronautics certificate</p>
+                    <p style="margin-left: 5px; margin-bottom: 0">Introduction to aeronautics certificate</p>
                     <small style="margin-left: 5px">Obtained in 2016.</small>
                 </div>
             </div>
             <div class="col-9"> <!-- Colonne de Droite -->
                 <h1>My background</h1>
                 <div style="margin-left: 30px; margin-bottom: 20px"> <!-- Sous partie My Background -->
-                    <h4 style="margin-bottom: 0px"><b>CSTB</b>, Sophia Antipolis — Centre Scientifique et Technique du Bâtiment</h4>
+                    <h4 style="margin-bottom: 0"><b>CSTB</b>, Sophia Antipolis — Centre Scientifique et Technique du Bâtiment</h4>
                     <code>January 2015 to January 2015</code>
                     <ul><li>Creation of an algorithm for the electrical automation of a building.</li></ul>
-                    <h4 style="margin-bottom: 0px"><b>Alexis de Tocqueville High School</b>, Grasse</h4>
+                    <h4 style="margin-bottom: 0"><b>Alexis de Tocqueville High School</b>, Grasse</h4>
                     <code>September 2015 to June 2018</code>
-                    <h4 style="margin-bottom: 0px"><b>National School of Engineering of Saint-Etienne</b>, Saint Etienne</h4>
+                    <h4 style="margin-bottom: 0"><b>National School of Engineering of Saint-Etienne</b>, Saint Etienne</h4>
                     <code>September 2018 to February 2020</code>
-                    <h4 style="margin-bottom: 0px"><b>LEASON</b>, Saint Cézaire — Carrefour Contact</h4>
+                    <h4 style="margin-bottom: 0"><b>LEASON</b>, Saint Cézaire — Carrefour Contact</h4>
                     <code>March 2020 to June 2020</code>
                     <ul><li>Work as a Commercial Employee in a team of 15 people.</li></ul>
-                    <h4 style="margin-bottom: 0px"><b>Computer Science DUT</b>, Aix-en-Provence</h4>
+                    <h4 style="margin-bottom: 0"><b>Computer Science DUT</b>, Aix-en-Provence</h4>
                     <code>September 2020 to Today</code>
                 </div>
                 <div> <!-- Sous partie My Skills -->
