Added articles to all pages

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="nav-left">
         <a href="https://www.ozeliurs.com" class="brand">Ozeliurs' Website</a>
         <div class="tabs">
-            <a href="https://www.ozeliurs.com/projects">Projects</a>
-            <a href="https://www.ozeliurs.com/articles">Articles</a>
+            <a href="https://www.ozeliurs.com/projects.html">Projects</a>
+            <a href="https://www.ozeliurs.com/articles.html">Articles</a>
         </div>
     </div>
 </nav>
