--- a/articles.html
+++ b/articles.html
@@ -15,6 +15,9 @@
             <a href="https://www.ozeliurs.com/articles.html">Articles</a>
         </div>
     </div>
+    <div class="nav-right">
+        <a href="https://github.com/ozeliurs-MaximeBilly" class="button outline">Github</a>
+    </div>
 </nav>
 <div class="container">
     <a href="/article/XXXX" class="text-dark"><div class="card" style="margin: 10px auto">
