Going to VSCode

--- a/articles.html
+++ b/articles.html
@@ -9,10 +9,10 @@
 <body style="background-color: rgba(26, 159, 96, 00.2)">
 <nav class="nav" style="background-color: white">
     <div class="nav-left">
-        <a href="https://www.ozeliurs.com" class="brand">Ozeliurs' Website</a>
+        <a href="/" class="brand">Ozeliurs' Website</a>
         <div class="tabs">
-            <a href="https://www.ozeliurs.com/projects.html">Projects</a>
-            <a href="https://www.ozeliurs.com/articles.html">Articles</a>
+            <a href="/projects.html">Projects</a>
+            <a href="/articles.html">Articles</a>
         </div>
     </div>
     <div class="nav-right">
