I already said I was sorry

--- a/www/fr/cv_fr.html
+++ b/www/fr/cv_fr.html
@@ -21,20 +21,23 @@
             </div>
         </div>
         <div class="col-9"> <!-- Colonne de Droite -->
-            <h1>Mon Parcours</h1>
-            <div style="margin-left: 30px; margin-bottom: 20px"> <!-- Sous partie My Background -->
-                <h4 style="margin-bottom: 0"><b>CSTB</b>, Sophia Antipolis — Centre Scientifique et Technique du Bâtiment</h4>
-                <code>Janvier 2015 à Janvier 2015</code>
-                <ul><li>Création d'un algorithme pour l'automatisation électrique d'un bâtiment.</li></ul>
-                <h4 style="margin-bottom: 0"><b>Lycée Alexis de Tocqueville</b>, Grasse</h4>
-                <code>Septembre 2015 à Juin 2018</code>
+            <h1>Ma formation</h1> <!-- Sous partie Formation -->
+            <div style="margin-left: 30px; margin-bottom: 20px">
+                <h4 style="margin-bottom: 0"><b>DUT Informatique</b>, Aix-en-Provence</h4>
+                <code>Septembre 2020 à Aujourd'hui</code>
                 <h4 style="margin-bottom: 0"><b>Ecole Nationale d'Ingénieurs de Saint Etienne</b>, Saint Etienne</h4>
                 <code>Septembre 2018 à Fevrier 2020</code>
+                <h4 style="margin-bottom: 0"><b>Lycée Alexis de Tocqueville</b>, Grasse</h4>
+                <code>Septembre 2015 à Juin 2018</code>
+            </div>
+            <h1>Mes expériences professionelles</h1>
+            <div style="margin-left: 30px; margin-bottom: 20px"> <!-- Sous partie experience professionelle -->
                 <h4 style="margin-bottom: 0"><b>LEASON</b>, Saint Cézaire — Carrefour Contact</h4>
                 <code>Mars 2020 à Juin 2020</code>
                 <ul><li>Travail en tant qu'employé commercial dans une équipe de 15 personnes.</li></ul>
-                <h4 style="margin-bottom: 0"><b>DUT Informatique</b>, Aix-en-Provence</h4>
-                <code>Septembre 2020 à Aujourd'hui</code>
+                <h4 style="margin-bottom: 0"><b>CSTB</b>, Sophia Antipolis — Centre Scientifique et Technique du Bâtiment</h4>
+                <code>Janvier 2015 à Janvier 2015</code>
+                <ul><li>Création d'un algorithme pour l'automatisation électrique d'un bâtiment.</li></ul>
             </div>
             <div> <!-- Sous partie My Skills -->
                 <h1>Mes compétences</h1>
