--- a/www/fr/cv_fr.html
+++ b/www/fr/cv_fr.html
@@ -5,7 +5,7 @@
             <code style="margin-left: 5px" class="is-center">Maxime BILLY</code>
             <hr>
             <div style="margin-left: 5px">
-                <samp>Né le XX/03/2000 (21 ans)</samp><br>
+                <samp>Né le 12/03/2000 (21 ans)</samp><br>
                 <samp>Vit à Saint Cézaire 06530</samp>
             </div>
             <hr>
@@ -29,6 +29,7 @@
                 <code>Septembre 2018 à Fevrier 2020</code>
                 <h4 style="margin-bottom: 0"><b>Lycée Alexis de Tocqueville</b>, Grasse</h4>
                 <code>Septembre 2015 à Juin 2018</code>
+                <ul><li>Baccalauréat Scientifique spécialité Physique-Chimie <b>Mention Bien</b>.</li></ul>
             </div>
             <h1>Mes expériences professionelles</h1>
             <div style="margin-left: 30px; margin-bottom: 20px"> <!-- Sous partie experience professionelle -->
