--- a/www/allumes.html
+++ b/www/allumes.html
@@ -26,7 +26,7 @@
             },
         });
 
-        fetch("https://api.ozeliurs.com/allumes/hist/")
+        fetch("https://api.ozeliurs.com/allumes/last/")
         .then(response => {
             if (!response.ok) {
                 throw new Error(`Request failed with status ${reponse.status}`)
