--- a/www/index.html
+++ b/www/index.html
@@ -68,6 +68,14 @@
                         <div style="margin-left: 30px; margin-bottom: 20px">
                             <h4 style="margin-bottom: 0"><b>DUT Informatique</b>, Aix-en-Provence</h4>
                             <code>Septembre 2020 à Aujourd'hui</code>
+                            <ul style="margin-bottom: 5px">
+                                <li>Classement par Semestre: </li>
+                                <ul>
+                                    <li>Premier Semestre: <b>40/115</b></li>
+                                    <li>Second Semestre: <b>22/114</b></li>
+                                    <li>Troisième Semestre: <b>3/71</b></li>
+                                </ul>
+                            </ul>
                             <h4 style="margin-bottom: 0"><b>Ecole Nationale d'Ingénieurs de Saint Etienne</b>, Saint Etienne</h4>
                             <code>Septembre 2018 à Fevrier 2020</code>
                             <ul style="margin-bottom: 5px">
