plus de details

--- a/www/index.html
+++ b/www/index.html
@@ -120,7 +120,9 @@
                                     <div class="col-11 bg-primary text-white" style="border-radius: 5px; margin-bottom: 5px"><p style="margin: 0px 0px 0px 10px"><b>Python</b></p></div>
                                     <div class="col-10 bg-primary text-white" style="border-radius: 5px; margin-bottom: 5px"><p style="margin: 0px 0px 0px 10px"><b>Systèmes</b> (195h)<p></div>
                                     <div class="col-9 bg-primary text-white" style="border-radius: 5px; margin-bottom: 5px"><p style="margin: 0px 0px 0px 10px"><b>SQL</b> (135h)</p></div>
-                                    <div class="col-9 bg-primary text-white" style="border-radius: 5px; margin-bottom: 5px"><p style="margin: 0px 0px 0px 10px"><b>Web</b> (90h)</p></div>
+                                    <div class="col-9 bg-primary text-white" style="border-radius: 5px; margin-bottom: 5px"><p style="margin: 0px 0px 0px 10px"><b>HTML/CSS</b></p></div>
+                                    <div class="col-8 bg-primary text-white" style="border-radius: 5px; margin-bottom: 5px"><p style="margin: 0px 0px 0px 10px"><b>PHP</b></p></div>
+                                    <div class="col-8 bg-primary text-white" style="border-radius: 5px; margin-bottom: 5px"><p style="margin: 0px 0px 0px 10px"><b>Javascript</b></p></div>
                                     <div class="col-8 bg-primary text-white" style="border-radius: 5px; margin-bottom: 5px"><p style="margin: 0px 0px 0px 10px"><b>C++</b></p></div>
                                     <div class="col-6 bg-primary text-white" style="border-radius: 5px; margin-bottom: 5px"><p style="margin: 0px 0px 0px 10px"><b>Java</b></p></div>
                                 </div>
