--- a/www/index.html
+++ b/www/index.html
@@ -14,8 +14,8 @@
             <div class="nav-left">
                 <a href="/" class="brand">Ozeliurs' Website</a>
                 <div class="tabs">
-                    <a href="/projects">Projects</a>
-                    <a href="/articles">Articles</a>
+                    <a href="https://blog.ozeliurs.com/projects">Projects</a>
+                    <a href="https://blog.ozeliurs.com/guides">Guides</a>
                 </div>
             </div>
             <div class="nav-right">
