--- a/www/index.html
+++ b/www/index.html
@@ -93,6 +93,13 @@
                         </div>
                         <h1>Mes expériences professionelles</h1>
                         <div style="margin-left: 30px; margin-bottom: 20px"> <!-- Sous partie experience professionelle -->
+                            <h4 style="margin-bottom: 0"><b>See Tickets</b>, Marseille - Stage de fin d'études</h4>
+                            <code>Avril 2022 à Juin 2022</code>
+                            <ul><li>Automatisation du process de remboursement des clients finaux.</li></ul>
+                            <div class="row">
+                                <div class="col-auto bg-primary text-white" style="border-radius: 5px; margin-bottom: 5px"><p style="margin: 0 10px">Travailler en Autonomie.</p></div>
+                                <div class="col-auto bg-primary text-white" style="border-radius: 5px; margin-bottom: 5px"><p style="margin: 0 10px">Organiser un projet.</p></div>
+                            </div>
                             <h4 style="margin-bottom: 0"><b>LEASON</b>, Saint Cézaire — Carrefour Contact</h4>
                             <code>Mars 2020 à Juin 2020</code>
                             <ul style="margin-bottom: 5px"><li>Travail en tant qu'employé commercial dans une équipe de 15 personnes.</li>
