--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
                         <hr>
                         <div style="margin-left: 5px">
                             <a href="mailto:ozeliurs@gmail.com">
-                                <code class="is-center" style="margin-bottom: 5px;">maxime.billy@etu.univ-amu.fr</code>
+                                <code class="is-center" style="margin-bottom: 5px;">ozeliurs@gmail.com</code>
                             </a>
                             <a href="tel:+33695923210">
                                 <code class="is-center">06 95 92 32 10</code>
