--- a/www/index.html
+++ b/www/index.html
@@ -142,7 +142,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div> <!-- Sous partie Centers of interest -->
+                        <div> <!-- Sous partie Centres d'interets -->
                             <h1>Centres d'intérêt</h1>
                             <ul>
                                 <li>Domotique</li>
